[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/popup/Introduction/crashIntro.gd" type="Script" id=1]
[ext_resource path="res://font/CarterOne.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/pieces/Green_Piece.tscn" type="PackedScene" id=3]
[ext_resource path="res://font/kirby-classic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/pieces/crash_gem/Green_CrashPiece.tscn" type="PackedScene" id=5]
[ext_resource path="res://art/Introduction/Start_Button.png" type="Texture" id=6]
[ext_resource path="res://art/Introduction/Skip_button.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 25
extra_spacing_bottom = -6
extra_spacing_space = 5
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
resource_name = "basicGem_anim"
length = 14.0
tracks/0/type = "value"
tracks/0/path = NodePath("Control:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 12.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/lblTitle:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/Green_Piece:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7, 7.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/Green_Piece:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control/lblGem:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.7, 0.9, 1.1, 2, 2.3, 2.5, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 200, 268.839 ), Vector2( 200, 268.839 ), Vector2( 160, 268.839 ), Vector2( 181.462, 268.839 ), Vector2( 181.462, 268.839 ), Vector2( 181.462, 492.839 ), Vector2( 181.462, 468.839 ), Vector2( 181.462, 478.839 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Control/lblGem:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Control/lblGem:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.6, 0.9, 4.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Control/Green_Piece:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2, 2.3, 2.5, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 96.196, 276.621 ), Vector2( 96.196, 276.621 ), Vector2( 96.196, 500 ), Vector2( 96.196, 476.621 ), Vector2( 96.196, 486.621 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Control/Green_CrashPiece:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 2.7, 7.2, 8.9, 11.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Control/lblCrashGem:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 2.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Control/lblCrashGem:rect_position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 2.8, 3, 3.2, 3.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 181.462, 268.839 ), Vector2( 181.462, 268.839 ), Vector2( 141.462, 268.839 ), Vector2( 186.462, 268.839 ), Vector2( 181.462, 268.839 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Control/Green_CrashPiece:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 2.7, 2.9, 3, 8.7, 8.8, 9, 9.2, 9.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Control/Green_CrashPiece:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 5.6, 5.9, 7.7, 8.9, 9.9, 10.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 96.1446, 276.833 ), Vector2( 96.1446, 276.833 ), Vector2( 96.145, 428 ), Vector2( 96.145, 428 ), Vector2( 96.1446, 276.833 ), Vector2( 96.1446, 276.833 ), Vector2( 96.145, 428 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Control/lblCrashGem:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 2.6, 3, 5.1, 5.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Control/lblCombine:modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 5.8, 6.1, 7.2, 7.5, 8.9, 9.3, 12, 12.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Control/lblCombine:rect_position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 5.8, 8.7, 8.9, 9.9, 10.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 63, 225 ), Vector2( 63, 225 ), Vector2( 63, 170 ), Vector2( 63, 170 ), Vector2( 63, 322 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Control/lblCombine:text")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 5.8, 7.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "COMBINE LIKE COLORS TO DEAL DAMAGE ", "BREAK MULTIPLE GEMS TO DO MORE DAMAGE" ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Control/Green_Piece2:visible")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0, 7.7, 11.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("Control/Green_Piece3:visible")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0, 7.9, 11.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("Control/Green_Piece4:visible")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0, 8.1, 11.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("Control/Green_Piece2:scale")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 7.7, 7.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 1, 1 ) ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("Control/Green_Piece3:scale")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 7.9, 8.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 1, 1 ) ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("Control/Green_Piece4:scale")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 8.1, 8.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 1, 1 ) ]
}
tracks/23/type = "value"
tracks/23/path = NodePath("lblGoal:visible")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"times": PoolRealArray( 0, 12.6, 13.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/24/type = "value"
tracks/24/path = NodePath("lblGoal:rect_position")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/keys = {
"times": PoolRealArray( 12.6 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 38, 300 ) ]
}
tracks/25/type = "value"
tracks/25/path = NodePath("lblGoal:rect_scale")
tracks/25/interp = 1
tracks/25/loop_wrap = true
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/keys = {
"times": PoolRealArray( 12.6, 12.9, 13 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/26/type = "value"
tracks/26/path = NodePath("Control/btnStart:visible")
tracks/26/interp = 1
tracks/26/loop_wrap = true
tracks/26/imported = false
tracks/26/enabled = true
tracks/26/keys = {
"times": PoolRealArray( 0, 12.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("lblbreakGem:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 38, 250 ), Vector2( 38, 293 ), Vector2( 38, 293 ), Vector2( 38, 350 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("lblbreakGem:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("lblbreakGem:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("lblGoal:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 38, 293 ), Vector2( 38, 293 ), Vector2( 500, 293 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("lblGoal:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("lblGoal:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="crashIntro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0.0993652, 0.0487804 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0588235, 0.0588235, 0.0588235, 0.768627 )

[node name="lblGoal" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -33.5
margin_right = 150.004
margin_bottom = 47.5
rect_min_size = Vector2( 300, 0 )
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 149.59, 37.1805 )
size_flags_horizontal = 9
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "THE GOAL OF THE GAME IS SIMPLE!"
align = 1
autowrap = true

[node name="lblbreakGem" type="Label" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 16.5
margin_right = 150.0
margin_bottom = 121.5
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 9
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "BREAK GEMS TO DEAL DAMAGE TO YOUR OPPONENT"
align = 1
autowrap = true

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.330414
margin_bottom = 0.330444

[node name="lblTitle" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -98.5
margin_top = 104.0
margin_right = 98.5
margin_bottom = 133.0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 100.135, 15.0827 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.901961, 0.705882, 0.117647, 1 )
text = "BASIC GEM TYPE"

[node name="Green_Piece" parent="Control" instance=ExtResource( 3 )]
visible = false
position = Vector2( 96.196, 276.621 )

[node name="lblGem" type="Label" parent="Control"]
visible = false
margin_left = 200.0
margin_top = 268.839
margin_right = 304.013
margin_bottom = 286.839
custom_fonts/font = SubResource( 3 )
text = "THIS IS A GEM"

[node name="Green_CrashPiece" parent="Control" instance=ExtResource( 5 )]
visible = false
position = Vector2( 96.1446, 276.833 )

[node name="lblCrashGem" type="Label" parent="Control"]
visible = false
margin_left = 181.462
margin_top = 268.839
margin_right = 340.463
margin_bottom = 286.839
custom_fonts/font = SubResource( 3 )
text = "THIS IS A CRASH GEM"

[node name="lblCombine" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -125.0
margin_top = 225.0
margin_right = 125.0
margin_bottom = 292.0
rect_min_size = Vector2( 250, 0 )
rect_pivot_offset = Vector2( 126.876, 25.286 )
custom_fonts/font = SubResource( 4 )
text = "COMBINE LIKE COLORS TO DEAL DAMAGE "
align = 1
autowrap = true

[node name="Green_Piece2" parent="Control" instance=ExtResource( 3 )]
visible = false
position = Vector2( 95.7744, 485.898 )
scale = Vector2( 0.200002, 0.200002 )

[node name="Green_Piece3" parent="Control" instance=ExtResource( 3 )]
visible = false
position = Vector2( 158.836, 486.263 )

[node name="Green_Piece4" parent="Control" instance=ExtResource( 3 )]
visible = false
position = Vector2( 221.319, 486.306 )
scale = Vector2( 0.2, 0.2 )

[node name="btnStart" type="Button" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -177.331
margin_top = -189.591
margin_right = 180.669
margin_bottom = -47.5906
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 173.719, 68.5894 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true

[node name="btnSkip" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -175.392
margin_top = 30.0
margin_right = -19.392
margin_bottom = 106.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 155.409, -1.02539 )
icon = ExtResource( 7 )
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "lblGoal_anim"
anims/basicGem_anim = SubResource( 5 )
anims/lblBreakGem_anim = SubResource( 6 )
anims/lblGoal_anim = SubResource( 7 )

[connection signal="pressed" from="Control/btnStart" to="." method="_on_btnStart_pressed"]
[connection signal="pressed" from="btnSkip" to="." method="_on_btnSkip_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
